// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height height = 100 1`] = `
<div>
  <!---->
  <div
    class="t-table t-table__header--fixed"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        
        <div
          class="t-table__header"
          style="padding-right: 0px;"
        >
          <table
            style="table-layout: fixed;"
          >
            <colgroup>
              
              <col />
              <col />
              <col />
              
            </colgroup>
            <thead>
              
              <tr>
                
                <td
                  class=""
                  colspan="1"
                  rowspan="1"
                >
                  id
                </td>
                <td
                  class=""
                  colspan="1"
                  rowspan="1"
                >
                  类型
                </td>
                <td
                  class=""
                  colspan="1"
                  rowspan="1"
                >
                  取值
                </td>
                
              </tr>
              
            </thead>
          </table>
        </div>
        <div
          class="t-table__body"
          style="height: 100px;"
        >
          <table
            style="table-layout: fixed;"
          >
            <colgroup>
              
              <col />
              <col />
              <col />
              
            </colgroup>
            <tbody
              class="table-body"
            >
              
              <tr
                class=""
                draggable="false"
              >
                
                <td
                  class=""
                  length="3"
                >
                  1
                </td>
                <td
                  class=""
                  length="3"
                >
                  Number
                </td>
                <td
                  class=""
                  length="3"
                >
                  1
                </td>
                
              </tr>
              <tr
                class=""
                draggable="false"
              >
                
                <td
                  class=""
                  length="3"
                >
                  2
                </td>
                <td
                  class=""
                  length="3"
                >
                  Number
                </td>
                <td
                  class=""
                  length="3"
                >
                  2
                </td>
                
              </tr>
              <tr
                class=""
                draggable="false"
              >
                
                <td
                  class=""
                  length="3"
                >
                  3
                </td>
                <td
                  class=""
                  length="3"
                >
                  Number
                </td>
                <td
                  class=""
                  length="3"
                >
                  3
                </td>
                
              </tr>
              
            </tbody>
            <!---->
          </table>
        </div>
        
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "large", verticalAlign="top" 1`] = `
<div>
  <!---->
  <div
    class="t-table t-size-l t-table-valign__top"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        <table
          style="table-layout: fixed;"
        >
          
          <colgroup>
            
            
          </colgroup>
          <thead>
            
            <tr>
              
              
            </tr>
            
          </thead>
          <tbody
            class="table-body"
          >
            
            
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="0"
              >
                <div
                  class="t-table--empty"
                >
                  暂无数据
                </div>
              </td>
            </tr>
          </tfoot>
          
        </table>
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "medium", verticalAlign="bottom" 1`] = `
<div>
  <!---->
  <div
    class="t-table t-table-valign__bottom"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        <table
          style="table-layout: fixed;"
        >
          
          <colgroup>
            
            
          </colgroup>
          <thead>
            
            <tr>
              
              
            </tr>
            
          </thead>
          <tbody
            class="table-body"
          >
            
            
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="0"
              >
                <div
                  class="t-table--empty"
                >
                  暂无数据
                </div>
              </td>
            </tr>
          </tfoot>
          
        </table>
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.bordered, :props:hover, :props.stripe, :props.size, :props.verticalAlign, :props.height size = "small", verticalAlign="middle" 1`] = `
<div>
  <!---->
  <div
    class="t-table t-table--bordered t-table--striped t-table--hoverable t-size-s"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        <table
          style="table-layout: fixed;"
        >
          
          <colgroup>
            
            <col />
            <col />
            <col />
            
          </colgroup>
          <thead>
            
            <tr>
              
              <td
                class=""
                colspan="1"
                rowspan="1"
              >
                id
              </td>
              <td
                class=""
                colspan="1"
                rowspan="1"
              >
                类型
              </td>
              <td
                class=""
                colspan="1"
                rowspan="1"
              >
                取值
              </td>
              
            </tr>
            
          </thead>
          <tbody
            class="table-body"
          >
            
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class=""
                length="3"
              >
                1
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                1
              </td>
              
            </tr>
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class=""
                length="3"
              >
                2
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                2
              </td>
              
            </tr>
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class=""
                length="3"
              >
                3
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                3
              </td>
              
            </tr>
            
          </tbody>
          <!---->
          
        </table>
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` is undefined 1`] = `
<div>
  <!---->
  <div
    class="t-table"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        <table
          style="table-layout: fixed;"
        >
          
          <colgroup>
            
            
          </colgroup>
          <thead>
            
            <tr>
              
              
            </tr>
            
          </thead>
          <tbody
            class="table-body"
          >
            
            
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="0"
              >
                <div
                  class="t-table--empty"
                >
                  暂无数据
                </div>
              </td>
            </tr>
          </tfoot>
          
        </table>
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with align, width, minWidth and ellipsis 1`] = `
<div>
  <!---->
  <div
    class="t-table"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        <table
          style="table-layout: fixed;"
        >
          
          <colgroup>
            
            <col
              style="width: 100px; min-width: 200px;"
            />
            <col />
            <col />
            
          </colgroup>
          <thead>
            
            <tr>
              
              <td
                class="align-left text-ellipsis"
                colspan="1"
                rowspan="1"
                style="overflow: hidden;"
              >
                id
              </td>
              <td
                class=""
                colspan="1"
                rowspan="1"
              >
                类型
              </td>
              <td
                class=""
                colspan="1"
                rowspan="1"
              >
                取值
              </td>
              
            </tr>
            
          </thead>
          <tbody
            class="table-body"
          >
            
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="align-left text-ellipsis"
                length="3"
                style="overflow: hidden;"
              >
                1
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                1
              </td>
              
            </tr>
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="align-left text-ellipsis"
                length="3"
                style="overflow: hidden;"
              >
                2
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                2
              </td>
              
            </tr>
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="align-left text-ellipsis"
                length="3"
                style="overflow: hidden;"
              >
                3
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                3
              </td>
              
            </tr>
            
          </tbody>
          <!---->
          
        </table>
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with children 1`] = `
<div>
  <!---->
  <div
    class="t-table"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        <table
          style="table-layout: fixed;"
        >
          
          <colgroup>
            
            <col />
            <col />
            
          </colgroup>
          <thead>
            
            <tr>
              
              <td
                class=""
                colspan="4"
                rowspan="1"
              >
                汇总属性
              </td>
              <td
                class=""
                colspan="2"
                rowspan="1"
              >
                属性及说明
              </td>
              
            </tr>
            <tr>
              
              <td
                class="align-left text-ellipsis test"
                colspan="1"
                rowspan="2"
                style="overflow: hidden;"
              >
                平台
              </td>
              <td
                class=""
                colspan="3"
                rowspan="1"
              >
                类型及默认值
              </td>
              <td
                class="align-left text-ellipsis test2"
                colspan="1"
                rowspan="2"
                style="overflow: hidden;"
              >
                属性
              </td>
              <td
                class="align-left text-ellipsis row"
                colspan="1"
                rowspan="2"
                style="overflow: hidden;"
              >
                说明
              </td>
              
            </tr>
            <tr>
              
              <td
                class="align-left text-ellipsis row"
                colspan="1"
                rowspan="1"
                style="overflow: hidden;"
              >
                类型
              </td>
              <td
                class="align-left text-ellipsis test4"
                colspan="1"
                rowspan="1"
                style="overflow: hidden;"
              >
                默认值
              </td>
              <td
                class="align-left text-ellipsis test3"
                colspan="1"
                rowspan="1"
                style="overflow: hidden;"
              >
                是否必传
              </td>
              
            </tr>
            
          </thead>
          <tbody
            class="table-body"
          >
            
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="align-left text-ellipsis test"
                length="6"
                style="overflow: hidden;"
              >
                公有
              </td>
              <td
                class="align-left text-ellipsis row"
                length="6"
                style="overflow: hidden;"
              >
                any[]
              </td>
              <td
                class="align-left text-ellipsis test4"
                length="6"
                style="overflow: hidden;"
              >
                []
              </td>
              <td
                class="align-left text-ellipsis test3"
                length="6"
                style="overflow: hidden;"
              >
                Y
              </td>
              <td
                class="align-left text-ellipsis test2"
                length="6"
                style="overflow: hidden;"
              >
                data
              </td>
              <td
                class="align-left text-ellipsis row"
                length="6"
                style="overflow: hidden;"
              >
                数据源
              </td>
              
            </tr>
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="align-left text-ellipsis test"
                length="6"
                style="overflow: hidden;"
              >
                公有
              </td>
              <td
                class="align-left text-ellipsis row"
                length="6"
                style="overflow: hidden;"
              >
                String
              </td>
              <td
                class="align-left text-ellipsis test4"
                length="6"
                style="overflow: hidden;"
              >
                -1
              </td>
              <td
                class="align-left text-ellipsis test3"
                length="6"
                style="overflow: hidden;"
              >
                Y
              </td>
              <td
                class="align-left text-ellipsis test2"
                length="6"
                style="overflow: hidden;"
              >
                rowkey
              </td>
              <td
                class="align-left text-ellipsis row"
                length="6"
                style="overflow: hidden;"
              >
                指定rowkey
              </td>
              
            </tr>
            
          </tbody>
          <!---->
          
        </table>
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;

exports[`Table :props :props.columns \`columns\` with fixed column 1`] = `
<div>
  <!---->
  <div
    class="t-table t-table__cell--fixed t-table--has-fixed"
    defaultexpandedrowkeys=""
    expandedrowkeys=""
    expandicon="true"
    expandonrowclick="false"
    multiplesort="false"
    showcolumns="false"
    sortonrowdraggable="false"
  >
    <div
      class="t-loading-parent__relative"
    >
      
      <div
        class="t-table-content"
        style="overflow: auto;"
      >
        <table
          style="table-layout: fixed;"
        >
          
          <colgroup>
            
            <col />
            <col />
            <col />
            
          </colgroup>
          <thead>
            
            <tr>
              
              <td
                class="t-table__cell--fixed-left"
                colspan="1"
                rowspan="1"
                style="position: sticky; left: 0px;"
              >
                id
              </td>
              <td
                class=""
                colspan="1"
                rowspan="1"
              >
                类型
              </td>
              <td
                class=""
                colspan="1"
                rowspan="1"
              >
                取值
              </td>
              
            </tr>
            
          </thead>
          <tbody
            class="table-body"
          >
            
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="t-table__cell--fixed-left"
                length="3"
                style="position: sticky; left: 0px;"
              >
                1
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                1
              </td>
              
            </tr>
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="t-table__cell--fixed-left"
                length="3"
                style="position: sticky; left: 0px;"
              >
                2
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                2
              </td>
              
            </tr>
            <tr
              class=""
              draggable="false"
            >
              
              <td
                class="t-table__cell--fixed-left"
                length="3"
                style="position: sticky; left: 0px;"
              >
                3
              </td>
              <td
                class=""
                length="3"
              >
                Number
              </td>
              <td
                class=""
                length="3"
              >
                3
              </td>
              
            </tr>
            
          </tbody>
          <!---->
          
        </table>
      </div>
      
      
      
      <!---->
    </div>
  </div>
</div>
`;
